<resources>
    <string name="app_name">Sofra</string>
    <string name="seller">Selling food</string>
    <string name="order">Order food</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_list">Orders</string>
    <string name="title_profile">Profile</string>
    <string name="title_more">More</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_order">Current Orders</string>
    <string name="Previous_order">Previous Orders</string>
    <string name="title_activity_restaurant_home">RestaurantHomeActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgetpassword">Forget Password</string>
    <string name="register">don\'t have account?Press here</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="registerr">Register</string>
    <string name="store_image">store image</string>
    <string name="minimum_charger">minimum charger</string>
    <string name="delivery_cost">delivery cost</string>
    <string name="communication_data">Communication data</string>
    <string name="phone_number">Phone Number</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="client_name">Name</string>
    <string name="next">Next</string>
    <string name="category_name">Chicken Fries Reddish</string>
    <string name="category_price">Price</string>
    <string name="SR">SR</string>
    <string name="product_image">Product  Image</string>
    <string name="add_product_image">Add Product Image</string>
    <string name="forget_password">Forget Password</string>
    <string name="send">Send</string>
    <string name="change_password">Change Password</string>
    <string name="validation_code">Validation Code</string>
    <string name="new_password">New Password</string>
    <string name="status">Status</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="product_name">Product Name</string>
    <string name="product_dec">Product Descraption</string>
    <string name="price">Price</string>
    <string name="offer_price">Offer Price</string>
    <string name="time">Time</string>
    <string name="new_order">New Order</string>
    <string name="client_rname">Client Name</string>
    <string name="client">Client :</string>
    <string name="shrouk_ibrahim">Shrouk Ibrahim</string>
    <string name="order_num">Order Number :</string>
    <string name="order_of_num">123</string>
    <string name="total">Total :</string>
    <string name="address">Address :</string>
    <string name="call">Call</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="completed_request">Completed Request</string>
    <string name="more">More</string>
    <string name="my_offer">Offers</string>
    <string name="connect_us">Connect us</string>
    <string name="about">About</string>
    <string name="comment_review"><![CDATA[Comment&Reviews]]></string>
    <string name="logout">Logout</string>
    <string name="availability">availability</string>
    <string name="get_it_now">Get it now</string>
    <string name="full_name">Full Name</string>
    <string name="message_content">Message content</string>
    <string name="complaint">Complaint</string>
    <string name="suggestion">Suggestion</string>
    <string name="inquiry">Inquiry</string>
    <string name="about_us">About Us</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="add_comment_or_review">Add Comment Or Review</string>
    <string name="restaurant_des">Description</string>
    <string name="preparingtime">Preparing Time :</string>
    <string name="minute">Minute</string>
    <string name="special_order">Special order</string>
    <string name="enter_your_order_here">Enter your order here</string>
    <string name="quantity">Quantity</string>
    <string name="sum_total">Sum Total</string>
    <string name="restaurant_sales">Restaurant sales :</string>
    <string name="commissions">Commissions :</string>
    <string name="commissions_des">Please transfer 10% of the profits sold within a maximum of one month. All orders are registered on your personal account</string>
    <string name="payments">Payments :</string>
    <string name="residual">Residual :</string>
    <string name="alrajhi">Al Rajhi :</string>
    <string name="app_commision">App Commission :</string>
    <string name="ahly">Ahly :</string>
    <string name="sofra">Sofra App</string>
    <string name="add_new_offer">Add New Offer</string>
    <string name="add_offer_image">Add Offer Image</string>
    <string name="offer_name">Offer Name</string>
    <string name="offer_dec">Description</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="preparing_time">preparing time</string>
    <string name="delete">Delete</string>
    <string name="confirm_order"> Confirm Order</string>
    <string name="add_more">Add More</string>
    <string name="day">Day :</string>
    <string name="order_details">Order details : </string>
    <string name="order_price">Order Price :</string>
    <string name="Payment_by">Payment By :</string>
    <string name="delivery_costt">Delivery Cost :</string>
    <string name="total_txt">Total :</string>
    <string name="pricee">20</string>
    <string name="add_nots">Add Nots .....</string>
    <string name="cash">Cash</string>
    <string name="online">Online</string>
    <string name="name">name</string>
    <string name="accepted">accepted</string>


    <string name="msg_token_fmt" translatable="false">dCQbnfNht3I: %s</string>


</resources>
