<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragment.Restaurant.homecycle.RAddNewItemFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_2xl"
            android:layout_marginBottom="@dimen/dim_2xl"
            android:gravity="center"
            android:text="@string/connect_us"
            android:textColor="@color/black"
            android:textSize="@dimen/dim_3xl" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/client_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt"
            android:layout_marginStart="@dimen/dim_2xl"
            android:layout_marginEnd="@dimen/dim_2xl"
            android:layout_marginBottom="@dimen/dim_2xl"
            android:background="@drawable/row_style"
            android:backgroundTint="@color/Dgray"
            android:hint="@string/full_name" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/client_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/client_name"
            android:layout_marginStart="@dimen/dim_2xl"
            android:layout_marginEnd="@dimen/dim_2xl"
            android:layout_marginBottom="@dimen/dim_2xl"
            android:background="@drawable/row_style"
            android:backgroundTint="@color/Dgray"
            android:hint="@string/email" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/client_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/client_email"
            android:layout_marginStart="@dimen/dim_2xl"
            android:layout_marginEnd="@dimen/dim_2xl"
            android:layout_marginBottom="@dimen/dim_2xl"
            android:background="@drawable/row_style"
            android:backgroundTint="@color/Dgray"
            android:hint="@string/phone_number" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/message_content"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_20xl"
            android:layout_below="@+id/client_phone"
            android:layout_marginStart="@dimen/dim_2xl"
            android:layout_marginEnd="@dimen/dim_2xl"
            android:layout_marginBottom="@dimen/dim_2xl"
            android:background="@drawable/row_style"
            android:backgroundTint="@color/Dgray"
            android:hint="@string/message_content" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/message_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/complaint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/complaint"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/suggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suggestion"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/inquiry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inquiry"
                    android:textColor="@color/black" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/send_massage"
            android:layout_width="@dimen/dim_20xl"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dim_2xl"
            android:background="@drawable/button_style"
            android:text="@string/send"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/dim_3xl"
            />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>