<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_offer_image"
        android:textColor="@color/black"
        android:textSize="@dimen/dim_2xl"
        android:gravity="center"
        android:layout_marginTop="@dimen/dim_xl"/>
    <ImageView
        android:id="@+id/add_offer_image"
        android:layout_width="@dimen/dim_15xl"
        android:layout_height="@dimen/dim_10xl"
        android:layout_below="@+id/txt"
        android:src="@drawable/base"
        android:scaleType="fitXY"
        android:background="@drawable/row_style"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/dim_2xl"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/offer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_offer_image"
        android:layout_marginBottom="@dimen/dim_2xl"
        android:layout_marginStart="@dimen/dim_2xl"
        android:layout_marginEnd="@dimen/dim_2xl"
        android:hint="@string/offer_name"
        android:textColorHint="@color/black"
        android:background="@drawable/row_style"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/offer_dec"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_7xl"
        android:layout_below="@+id/offer_name"
        android:layout_marginBottom="@dimen/dim_2xl"
        android:layout_marginStart="@dimen/dim_2xl"
        android:layout_marginEnd="@dimen/dim_2xl"
        android:text="@string/offer_dec"
        android:background="@drawable/row_style"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/offer_dec"
        android:layout_marginBottom="@dimen/dim_2xl"
        android:layout_marginStart="@dimen/dim_2xl"
        android:layout_marginEnd="@dimen/dim_2xl"
        android:hint="@string/price"
        android:textColorHint="@color/black"
        android:background="@drawable/row_style"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/offer_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price"
        android:layout_marginBottom="@dimen/dim_2xl"
        android:layout_marginStart="@dimen/dim_2xl"
        android:layout_marginEnd="@dimen/dim_2xl"
        android:hint="@string/offer_price"
        android:textColorHint="@color/black"
        android:background="@drawable/row_style"/>

    <Button
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/offer_price"
        android:layout_marginStart="@dimen/dim_5xl"
        android:drawableEnd="@drawable/icon_calendar"
        android:drawablePadding="@dimen/dim_3xl"
        android:background="@drawable/row_style"
        android:backgroundTint="@color/Dgray"
        android:padding="@dimen/dim_xl"
        android:text="@string/from"/>

    <Button
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/offer_price"
        android:layout_marginEnd="@dimen/dim_5xl"
        android:layout_alignParentEnd="true"
        android:drawableEnd="@drawable/icon_calendar"
        android:drawablePadding="@dimen/dim_3xl"
        android:background="@drawable/row_style"
        android:backgroundTint="@color/Dgray"
        android:padding="@dimen/dim_xl"
        android:text="@string/to"/>


    <Button
        android:id="@+id/edit_offer"
        android:layout_width="@dimen/dim_20xl"
        android:layout_height="wrap_content"
        android:layout_below="@id/from"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dim_3xl"
        android:text="@string/edit"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/button_style"/>
    <ProgressBar
        android:id="@+id/Progress_Bar"
        style="@style/StyleProgressBar" />


</RelativeLayout>