<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dim_18xl"
    android:layout_margin="@dimen/dim_m"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    android:padding="@dimen/dim_ss"
    app:cardBackgroundColor="@color/Dgray"
    app:cardCornerRadius="@dimen/dim_r"
    app:cardElevation="@dimen/dim_m">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/client_image"
            android:layout_width="@dimen/dim_10xl"
            android:layout_height="@dimen/dim_8xl"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/dim_2xl"
            android:layout_marginStart="@dimen/dim_xl"
            android:background="@drawable/row_style"
            android:src="@drawable/ic_perm_identity_black1_24dp" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_xl"
            android:layout_toEndOf="@+id/client_image"
            android:text="@string/client"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size_l"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Client_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_xl"
            android:layout_toEndOf="@+id/txt_name"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size_l"
            tools:text="@string/shrouk_ibrahim" />

        <TextView
            android:id="@+id/order_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_name"
            android:layout_marginStart="@dimen/dim_m"
            android:layout_toEndOf="@+id/client_image"
            android:textColor="@color/red"
            android:text="@string/order_num" />

        <TextView
            android:id="@+id/num_of_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_name"
            android:layout_toEndOf="@+id/order_num"
            android:textColor="@color/red"
            tools:text="@string/order_of_num" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_num"
            android:layout_marginStart="@dimen/dim_m"
            android:layout_toEndOf="@+id/client_image"
            android:textColor="@color/red"
            android:text="@string/total" />

        <TextView
            android:id="@+id/num_of_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_num"
            android:layout_toEndOf="@+id/total"
            android:textColor="@color/red"
            tools:text="@string/order_of_num" />

        <TextView
            android:id="@+id/txt_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/total"
            android:layout_marginStart="@dimen/dim_m"
            android:layout_toEndOf="@+id/client_image"
            android:textColor="@color/red"
            android:text="@string/address" />

        <TextView
            android:id="@+id/Client_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/total"
            android:layout_toEndOf="@+id/txt_address"
            android:textColor="@color/red"
            tools:text="@string/address" />
            <Button
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_2xl"
                android:layout_below="@+id/client_image"
                android:text="@string/completed_request"
                android:textColor="@color/white"
                android:background="@drawable/button_style"


                />






    </RelativeLayout>

</androidx.cardview.widget.CardView>