<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/brooke">

   <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackfround">
    <ImageView
        android:id="@+id/fragment_forget_password_step1_logo"
        android:layout_width="@dimen/dim_20xl"
        android:layout_height="@dimen/dim_20xl"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dim_marg_l"
        android:src="@drawable/logo"
        android:contentDescription="@string/restaurant_name" />
    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_size_m"
        android:layout_marginTop="@dimen/dim_marg_l"
        android:layout_below="@id/fragment_forget_password_step1_logo"
        />

       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/fragment_reset_password_email"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_below="@+id/txt"
           android:textColorLink="@color/white"
           android:hint="@string/email"
           android:textColorHint="@color/white"
           android:drawableStart="@drawable/email"
           android:inputType="textEmailAddress"
           android:drawablePadding="@dimen/dim_xl"
           android:layout_marginStart="@dimen/dim_3xl"
           android:layout_marginEnd="@dimen/dim_3xl" />


       <Button
        android:id="@+id/fragment_forget_password_step1_send_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_marg_l"
        android:layout_below="@id/fragment_reset_password_email"
        android:background="@drawable/button_style"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_size_l" />

       <ProgressBar
           android:id="@+id/Progress_Bar"
           android:layout_centerInParent="true"
           style="@style/StyleProgressBar" />
   </RelativeLayout>

</RelativeLayout>